@startuml
!include ../../styles.puml
'https://plantuml.com/class-diagram

title Strategy Design Pattern Documentation

header
    The Strategy Pattern defines a family of algorithms, encapsulates each one,
    and makes them interchangeable. It lets the algorithm vary independently from
    clients that use it, allowing for flexible and extensible code design.
endheader

abstract class ImageFileCompressor {
    + {abstract} compress(imagePath: String)
}

note right of ImageFileCompressor
    Defines the interface for image compression strategies.
    Subclasses implement specific compression algorithms.
end note

abstract class ImageFilter {
    + {abstract} apply(imagePath: String)
}

note right of ImageFilter
    Defines the interface for image filter strategies.
    Subclasses implement specific image filters.
end note

class JpegCompressor {
    compress(imagePath: String)
}

note bottom of JpegCompressor
    Implements JPEG compression for image files.
end note

class TiffCompressor {
    compress(imagePath: String)
}
note bottom of TiffCompressor
    Implements TIFF compression for image files.
end note

class PngCompressor {
    compress(imagePath: String)
}

note bottom of PngCompressor
    Implements PNG compression for image files.
end note

class BlackAndWhiteFilter {
    apply(imagePath: String)
}
class HighContrastFilter {
    apply(imagePath: String)
}

ImageFileCompressor <|-- JpegCompressor
ImageFileCompressor <|-- PngCompressor
ImageFileCompressor <|-- TiffCompressor
ImageFilter <|-- BlackAndWhiteFilter
ImageFilter <|-- HighContrastFilter

class ImageProcessor {
- compressor: ImageFileCompressor
- filter: ImageFilter
+ setCompressor(c: ImageFileCompressor)
+ setFilter(f: ImageFilter)
+ process(imagePath: String)
}

note right of ImageProcessor
    Context class that uses filter and compressor strategies
    to process image files. Allows dynamic strategy changes.
end note

ImageProcessor o-- ImageFileCompressor
ImageProcessor o-- ImageFilter

@enduml